--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-*.class
-*.log
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+**/logs/
+
+.settings
+bin
+.project*
+.classpath
+.idea/
+.factorypath
